--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,20 @@ nav a:hover {
     color: #0077cc;
 }
 
+.contact-links {
+    margin-top: 10px;
+}
+
+.contact-links a {
+    text-decoration: none;
+    color: #0077cc;
+    margin: 0 5px;
+}
+
+.contact-links a:hover {
+    text-decoration: underline;
+}
+
 .header-container {
     display: flex;
     align-items: center;
@@ -36,9 +50,8 @@ nav a:hover {
     margin-top: 20px;
 }
 
-/* Reduced size of profile picture */
 .profile-pic {
-    width: 150px; /* Adjusted size to half */
+    width: 130px; /* Adjusted size to half of 75px */
     height: auto;
     border-radius: 50%; /* Makes the image circular */
     margin-right: 20px; /* Space between image and text */
